dynamix/force-app/main/default/objects/communicat_o__Activity__c/communicat_o__Activity__c.object-meta.xml
<CustomObject>
    <description>Represents each activity in a conversation/individual activities with a client</description>
    <label>Activity</label>
    <nameField>
        <displayFormat>ACT-{00000000}</displayFormat>
        <label>Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>