dynamix/force-app/main/default/objects/communicat_o__Activity__c/fields/communicat_o__Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>communicat_o__Activity_Type</valueSetName>
    </valueSet>
</CustomField>