dynamix/force-app/main/default/objects/communicat_o__Activity__c/fields/communicat_o__Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>