dynamix/force-app/main/default/objects/communicat_o__Activity__c/fields/communicat_o__Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Channel_Type__c</fullName>
    <description>Type of channel that is used for communication</description>
    <label>Channel Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>