dynamix/force-app/main/default/objects/communicat_o__Activity__c/fields/communicat_o__Customer_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Customer_Channel_Id__c</fullName>
    <label>Customer Channel Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>