dynamix/force-app/main/default/objects/communicat_o__Activity__c/fields/communicat_o__Engage_Member__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Engage_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engage Member</label>
    <referenceTo>communicat_o__Engage_Members__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>