dynamix/force-app/main/default/objects/communicat_o__Activity__c/fields/communicat_o__Error__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Error__c</fullName>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>