dynamix/force-app/main/default/objects/communicat_o__Activity__c/fields/communicat_o__FileId__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__FileId__c</fullName>
    <label>FileId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>