dynamix/force-app/main/default/objects/communicat_o__Activity__c/fields/communicat_o__Filename__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Filename__c</fullName>
    <label>Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>