dynamix/force-app/main/default/objects/communicat_o__Activity__c/fields/communicat_o__FileUrl__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__FileUrl__c</fullName>
    <label>FileUrl</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>