dynamix/force-app/main/default/objects/communicat_o__Activity__c/fields/communicat_o__isRead__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__isRead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies whether the message has been read by the agent or not</description>
    <label>isRead</label>
    <type>Checkbox</type>
</CustomField>