dynamix/force-app/main/default/objects/communicat_o__Activity__c/fields/communicat_o__Linked_Conversation__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Linked_Conversation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links messages to a conversation</description>
    <label>Linked Conversation</label>
    <referenceTo>communicat_o__Conversation__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>