dynamix/force-app/main/default/objects/communicat_o__Activity__c/fields/communicat_o__List_Message__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__List_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>List Message</label>
    <referenceTo>communicat_o__List_Message__c</referenceTo>
    <relationshipLabel>Recipients</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>