dynamix/force-app/main/default/objects/communicat_o__Activity__c/fields/communicat_o__ListUniqueId__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__ListUniqueId__c</fullName>
    <externalId>true</externalId>
    <label>ListUniqueId</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>