dynamix/force-app/main/default/objects/communicat_o__Activity__c/fields/communicat_o__Message_Comments__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Message_Comments__c</fullName>
    <description>Body of the message sent/received</description>
    <label>Message/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>