dynamix/force-app/main/default/objects/communicat_o__Activity__c/fields/communicat_o__Message_Failed_Reason__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Message_Failed_Reason__c</fullName>
    <label>Message Failed Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>