dynamix/force-app/main/default/objects/communicat_o__Activity__c/fields/communicat_o__MessageId__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__MessageId__c</fullName>
    <externalId>true</externalId>
    <label>MessageId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>