dynamix/force-app/main/default/objects/communicat_o__Activity__c/fields/communicat_o__What_Id__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__What_Id__c</fullName>
    <label>What Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>