dynamix/force-app/main/default/objects/communicat_o__Activity__c/listViews/Bellavista_Activity.listView-meta.xml
<ListView>
    <fullName>Bellavista_Activity</fullName>
    <filterScope>Queue</filterScope>
    <label>Parkwoods D6</label>
    <queue>Parkwoods_D6</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>