dynamix/force-app/main/default/objects/communicat_o__Activity__c/listViews/CRM_Queue_Activity.listView-meta.xml
<ListView>
    <fullName>CRM_Queue_Activity</fullName>
    <filterScope>Queue</filterScope>
    <label>CRM Queue</label>
    <queue>CRM_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>