dynamix/force-app/main/default/objects/communicat_o__Activity__c/listViews/Divum_Activity.listView-meta.xml
<ListView>
    <fullName>Divum_Activity</fullName>
    <filterScope>Queue</filterScope>
    <label>Divum</label>
    <queue>Divum</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>