dynamix/force-app/main/default/objects/communicat_o__Activity__c/listViews/Dynamix_Activity.listView-meta.xml
<ListView>
    <fullName>Dynamix_Activity</fullName>
    <filterScope>Queue</filterScope>
    <label>Astrum</label>
    <queue>Astrum</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>