dynamix/force-app/main/default/objects/communicat_o__Activity__c/listViews/omni_Channel_Activity.listView-meta.xml
<ListView>
    <fullName>omni_Channel_Activity</fullName>
    <filterScope>Queue</filterScope>
    <label>omni Channel</label>
    <queue>omni_Channel</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>